--- a/FigLeaf.Core/Properties/Resources.resx
+++ b/FigLeaf.Core/Properties/Resources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Common_Culture" xml:space="preserve">
+    <value>en-US</value>
+  </data>
+  <data name="Common_Language" xml:space="preserve">
+    <value>English</value>
+  </data>
   <data name="Core_FileProcessor_Start" xml:space="preserve">
     <value>Start file processing..</value>
   </data>
@@ -129,13 +135,58 @@
   <data name="Core_PasswordRule_PasswordPlusFileNameNumbers" xml:space="preserve">
     <value>Master password followed by file name numbers</value>
   </data>
-  <data name="Ui_BindingTagValue" xml:space="preserve">
-    <value>en-US</value>
+  <data name="Ui_Actions_Cancel" xml:space="preserve">
+    <value>Cancel</value>
   </data>
-  <data name="Ui_Dialogs_SwitchLanguage" xml:space="preserve">
-    <value>Change language to English and restart application?</value>
+  <data name="Ui_Actions_DetailedLogging" xml:space="preserve">
+    <value>(detailed logging)</value>
+  </data>
+  <data name="Ui_Actions_Header" xml:space="preserve">
+    <value>Actions</value>
+  </data>
+  <data name="Ui_Actions_Log" xml:space="preserve">
+    <value>Log</value>
+  </data>
+  <data name="Ui_Actions_RestoreTargetTo" xml:space="preserve">
+    <value>Restore target to ..</value>
+  </data>
+  <data name="Ui_Actions_UpdateTarget" xml:space="preserve">
+    <value>Update target</value>
+  </data>
+  <data name="Ui_Dialogs_RestoreTarget" xml:space="preserve">
+    <value>Specify empty folder to unpack files</value>
+  </data>
+  <data name="Ui_Dialogs_SwitchLanguageFormat" xml:space="preserve">
+    <value>Change language to {0} and restart application?</value>
+  </data>
+  <data name="Ui_Folders_ExcludeFigLeafDir" xml:space="preserve">
+    <value>Exclude FigLeaf folder</value>
   </data>
   <data name="Ui_Folders_Header" xml:space="preserve">
     <value>Folders</value>
+  </data>
+  <data name="Ui_Folders_Source" xml:space="preserve">
+    <value>Source</value>
+  </data>
+  <data name="Ui_Folders_Target" xml:space="preserve">
+    <value>Target</value>
+  </data>
+  <data name="Ui_Security_Header" xml:space="preserve">
+    <value>Security</value>
+  </data>
+  <data name="Ui_Security_MasterPassword" xml:space="preserve">
+    <value>Master password</value>
+  </data>
+  <data name="Ui_Security_PasswordRule" xml:space="preserve">
+    <value>Password rule</value>
+  </data>
+  <data name="Ui_Security_ShowPassword" xml:space="preserve">
+    <value>Show password</value>
+  </data>
+  <data name="Ui_Thumbnails_Header" xml:space="preserve">
+    <value>Thumbnails</value>
+  </data>
+  <data name="Ui_Thumbnails_Size" xml:space="preserve">
+    <value>Size in pixels</value>
   </data>
 </root>
