--- a/FigLeaf.Core/Properties/Resources.ru-RU.resx
+++ b/FigLeaf.Core/Properties/Resources.ru-RU.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Common_Culture" xml:space="preserve">
+    <value>ru-RU</value>
+  </data>
+  <data name="Common_Language" xml:space="preserve">
+    <value>Русский</value>
+  </data>
   <data name="Core_FileProcessor_Start" xml:space="preserve">
     <value>Поехали!</value>
   </data>
@@ -129,13 +135,58 @@
   <data name="Core_PasswordRule_PasswordPlusFileNameNumbers" xml:space="preserve">
     <value>Базовый пароль + цифры из имени файла</value>
   </data>
-  <data name="Ui_BindingTagValue" xml:space="preserve">
-    <value>ru-RU</value>
+  <data name="Ui_Actions_Cancel" xml:space="preserve">
+    <value>Отмена</value>
   </data>
-  <data name="Ui_Dialogs_SwitchLanguage" xml:space="preserve">
-    <value>Сменить язык на Русский и перезапустить приложение?</value>
+  <data name="Ui_Actions_DetailedLogging" xml:space="preserve">
+    <value>(показывать детали)</value>
+  </data>
+  <data name="Ui_Actions_Header" xml:space="preserve">
+    <value>Действия</value>
+  </data>
+  <data name="Ui_Actions_Log" xml:space="preserve">
+    <value>Протокол</value>
+  </data>
+  <data name="Ui_Actions_RestoreTargetTo" xml:space="preserve">
+    <value>Восстановить ..</value>
+  </data>
+  <data name="Ui_Actions_UpdateTarget" xml:space="preserve">
+    <value>Запустить</value>
+  </data>
+  <data name="Ui_Dialogs_RestoreTarget" xml:space="preserve">
+    <value>Выберите пустую папку для восстановления файлов</value>
+  </data>
+  <data name="Ui_Dialogs_SwitchLanguageFormat" xml:space="preserve">
+    <value>Сменить язык на {0} и перезапустить приложение?</value>
+  </data>
+  <data name="Ui_Folders_ExcludeFigLeafDir" xml:space="preserve">
+    <value>Не обрабатывать папку с этой программой</value>
   </data>
   <data name="Ui_Folders_Header" xml:space="preserve">
     <value>Папки</value>
+  </data>
+  <data name="Ui_Folders_Source" xml:space="preserve">
+    <value>Откуда</value>
+  </data>
+  <data name="Ui_Folders_Target" xml:space="preserve">
+    <value>Куда</value>
+  </data>
+  <data name="Ui_Security_Header" xml:space="preserve">
+    <value>Безопасность</value>
+  </data>
+  <data name="Ui_Security_MasterPassword" xml:space="preserve">
+    <value>Базовый пароль</value>
+  </data>
+  <data name="Ui_Security_PasswordRule" xml:space="preserve">
+    <value>Правило</value>
+  </data>
+  <data name="Ui_Security_ShowPassword" xml:space="preserve">
+    <value>Показать пароль</value>
+  </data>
+  <data name="Ui_Thumbnails_Header" xml:space="preserve">
+    <value>Эскизы</value>
+  </data>
+  <data name="Ui_Thumbnails_Size" xml:space="preserve">
+    <value>Размер в пикселях</value>
   </data>
 </root>
