--- a/FigLeaf.Core/Properties/Resources.resx
+++ b/FigLeaf.Core/Properties/Resources.resx
@@ -255,4 +255,7 @@
   <data name="Core_FileProcessor_UnpackingFileFormat" xml:space="preserve">
     <value>Unpacking file {0} to {1}</value>
   </data>
+  <data name="Core_ThumbErrorFormat" xml:space="preserve">
+    <value>Failed to make thumbnail for the file {0}: {1}</value>
+  </data>
 </root>
