Console - fixed restore for multiple folders case

--- a/FigLeaf.Core/Properties/Resources.ru-RU.resx
+++ b/FigLeaf.Core/Properties/Resources.ru-RU.resx
@@ -270,6 +270,9 @@
   <data name="Ui_Folders_RestoreHeader" xml:space="preserve">
     <value>Восстановить</value>
   </data>
+  <data name="Console_RestoreSourceNotDefined" xml:space="preserve">
+    <value>Не задан источник для восстановления</value>
+  </data>
   <data name="Ui_Thumbnails_Enable" xml:space="preserve">
     <value>Генерировать эскизы</value>
   </data>
