--- a/FigLeaf.Core/Properties/Resources.resx
+++ b/FigLeaf.Core/Properties/Resources.resx
@@ -270,6 +270,9 @@
   <data name="Ui_Folders_RestoreHeader" xml:space="preserve">
     <value>Restore</value>
   </data>
+  <data name="Console_RestoreSourceNotDefined" xml:space="preserve">
+    <value>Failed to define restore source</value>
+  </data>
   <data name="Ui_Thumbnails_Enable" xml:space="preserve">
     <value>Generate thumbnails</value>
   </data>
