--- a/FigLeaf.Core/Properties/Resources.ru-RU.resx
+++ b/FigLeaf.Core/Properties/Resources.ru-RU.resx
@@ -190,7 +190,7 @@
     <value>Поехали!</value>
   </data>
   <data name="Core_FileProcessor_UnpackingFileFormat" xml:space="preserve">
-    <value>Распаковываем файл {0} в {1}</value>
+    <value>Распакован файл {0} в {1}</value>
   </data>
   <data name="Core_PasswordRule_FileNameNumbersPlusPassword" xml:space="preserve">
     <value>Цифры из имени файла + базовый пароль</value>
@@ -241,7 +241,7 @@
     <value>Куда</value>
   </data>
   <data name="Ui_Security_Header" xml:space="preserve">
-    <value>Безопасность</value>
+    <value>Архивирование</value>
   </data>
   <data name="Ui_Security_MasterPassword" xml:space="preserve">
     <value>Базовый пароль</value>
@@ -272,6 +272,15 @@
   </data>
   <data name="Console_RestoreSourceNotDefined" xml:space="preserve">
     <value>Не задан источник для восстановления</value>
+  </data>
+  <data name="Core_ArchiveNameRule_AddZipExtension" xml:space="preserve">
+    <value>Добавлять к имени файла расширение '.zip'</value>
+  </data>
+  <data name="Core_ArchiveNameRule_KeepOriginal" xml:space="preserve">
+    <value>Сохранять оригинальное имя файла</value>
+  </data>
+  <data name="Ui_Security_ArchiveNameRule" xml:space="preserve">
+    <value>Имя файла</value>
   </data>
   <data name="Ui_Thumbnails_Enable" xml:space="preserve">
     <value>Генерировать эскизы</value>
