Updated error handling, particularly for password rules parsing failures Some refactoring

--- a/FigLeaf.Core/Properties/Resources.resx
+++ b/FigLeaf.Core/Properties/Resources.resx
@@ -317,6 +317,12 @@ If some files/folders does not exist in the source - they needs to be deleted.
 Enable this option to prevent unintended deletion that can be made by mistake.
 </value>
   </data>
+  <data name="Core_PasswordRule_BadFormula" xml:space="preserve">
+    <value>Failed to evaluate password rule</value>
+  </data>
+  <data name="Core_PasswordRule_BadFormulaFormat" xml:space="preserve">
+    <value>Failed to evaluate password rule for file</value>
+  </data>
   <data name="Core_PasswordRule_Custom" xml:space="preserve">
     <value>Custom rule</value>
   </data>
