--- a/FigLeaf.Core/Properties/Resources.ru-RU.resx
+++ b/FigLeaf.Core/Properties/Resources.ru-RU.resx
@@ -317,6 +317,12 @@
 Включите данную опцию чтобы исключить непреднамеренное удаление файлов.
 </value>
   </data>
+  <data name="Core_PasswordRule_BadFormula" xml:space="preserve">
+    <value>Ошибка вычисления формулы пароля</value>
+  </data>
+  <data name="Core_PasswordRule_BadFormulaFormat" xml:space="preserve">
+    <value>Ошибка вычисления формулы пароля для файла {0}</value>
+  </data>
   <data name="Core_PasswordRule_Custom" xml:space="preserve">
     <value>Задать свое правило</value>
   </data>
