--- a/FigLeaf.Core/Properties/Resources.resx
+++ b/FigLeaf.Core/Properties/Resources.resx
@@ -349,6 +349,6 @@ For example, the rule 'File name numbers followed by master password' is defined
 Add(Digits(RemoveFileExtension(FileName)), Password)</value>
   </data>
   <data name="Core_FileProcessor_LogSum_DoneInFormat" xml:space="preserve">
-    <value>Done in {0} ({1} ms.)</value>
+    <value>Done in {0:hh\:mm\:ss} ({1} ms.)</value>
   </data>
 </root>
