--- a/FigLeaf.Core/Properties/Resources.ru-RU.resx
+++ b/FigLeaf.Core/Properties/Resources.ru-RU.resx
@@ -349,6 +349,6 @@
 Add(Digits(RemoveFileExtension(FileName)), Password)</value>
   </data>
   <data name="Core_FileProcessor_LogSum_DoneInFormat" xml:space="preserve">
-    <value>Выполнено за {0} ({1} мс.)</value>
+    <value>Выполнено за {0:hh\:mm\:ss} ({1} мс.)</value>
   </data>
 </root>
